[package]
name = "trustify-module-graphql"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
trustify-entity = { workspace = true, features = ["graphql"] }
trustify-common = { workspace = true }
trustify-module-fundamental = { workspace = true, features = ["graphql"] }
trustify-module-ingestor = { workspace = true }

async-graphql = { workspace = true, features = ["uuid"] }
async-graphql-actix-web = { workspace = true }
actix-web = { workspace = true }
uuid = { workspace = true }
utoipa-actix-web = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
test-context = { workspace = true }
trustify-test-context = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

