[package]
name = "trustify-module-importer"
version = "0.1.0-alpha.6"
edition = "2021"

[dependencies]
trustify-auth = { workspace = true }
trustify-common = { workspace = true }
trustify-entity = { workspace = true }
trustify-infrastructure = { workspace = true }
trustify-module-ingestor = { workspace = true }
trustify-module-storage = { workspace = true }

actix-web = { workspace = true }
anyhow = { workspace = true }
csaf = { workspace = true }
csaf-walker = { workspace = true, features = ["crypto-openssl", "csaf"] }
cve = { workspace = true }
git2 = { workspace = true }
hex = { workspace = true }
humantime-serde = { workspace = true }
log = { workspace = true }
osv = { workspace = true, features = ["schema"] }
parking_lot = { workspace = true }
regex = { workspace = true }
sbom-walker = { workspace = true, features = ["crypto-openssl", "cyclonedx-bom", "spdx-rs"] }
sea-orm = { workspace = true, features = ["sea-query-binder", "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print"] }
sea-query = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde-well-known"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
urlencoding = { workspace = true }
utoipa = { workspace = true, features = ["actix_extras", "time", "url"] }
uuid = { workspace = true, features = ["v4"] }
walkdir = { workspace = true }
walker-common = { workspace = true }

[dev-dependencies]
test-log = { workspace = true, features = ["log", "trace"] }
test-context = { workspace = true }
