[package]
name = "trustify-module-importer"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
trustify-auth = { workspace = true }
trustify-common = { workspace = true }
trustify-entity = { workspace = true }
trustify-module-ingestor = { workspace = true }
trustify-module-storage = { workspace = true }

actix-web = { workspace = true }
anyhow = { workspace = true }
csaf = { workspace = true }
csaf-walker = { workspace = true, features = ["crypto-openssl", "csaf"] }
cve = { workspace = true }
git2 = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
json-merge-patch = { workspace = true }
jsonpath-rust = { workspace = true }
log = { workspace = true }
osv = { workspace = true, features = ["schema"] }
parking_lot = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
sbom-walker = { workspace = true }
schemars = { workspace = true, features = ["url"] }
sea-orm = { workspace = true, features = ["sea-query-binder", "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print"] }
sea-query = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yml = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde-well-known"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
urlencoding = { workspace = true }
utoipa = { workspace = true, features = ["actix_extras", "time", "url"] }
utoipa-actix-web = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
walkdir = { workspace = true }
walker-common = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
bytesize = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
test-context = { workspace = true }
trustify-test-context = { workspace = true }
